# AuraCaptioner

./: .dockerignore  .env.example  Dockerfile  PROMPT_PLAN.md  README.md  packages.txt  pyproject.toml  requirements.txt
docker_test/input/: tasks.json
docker_test/output/: results.json
finetune/: README.md  __init__.py  prepare_data.py  requirements.txt  train.py
scratch/: run_docker_verification.py
scripts/: check_image.sh
src/: app.py  audio.py  config.py  fallback.py  grounding.py  ingest.py  judge.py  main.py  native_video.py  ocr.py  pipeline.py  sampling.py  schemas.py  styling.py  verification.py
tests/: conftest.py  test_audio.py  test_grounding.py  test_hardening.py  test_ingest.py  test_judge.py  test_native_video.py  test_ocr.py  test_pipeline.py  test_sampling.py  test_skeleton.py  test_styling.py  test_verification.py
