[project]
name = "video-captioning-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.39",
    "faster-whisper>=1.0",
    "openai>=1.0.0",
    "opencv-python-headless>=4.9",
    "pydantic>=2",
    "rapidocr-onnxruntime>=1.3",
    "requests>=2.31",
    "streamlit>=1.30.0",
    "webrtcvad>=2.0.10",
]
